--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "embla-carousel": "^8.3.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
-    "lucide-react": "^0.446.0",
+    "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "next": "14.2.13",
     "openai": "^4.67.3",
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "recharts": "^2.15.0",
     "svix": "^1.37.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
